Homepage - Fixed the large gaps of articles in hero section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -475,7 +475,7 @@ footer .lower {
   .articles {
     display: grid;
     grid-template-columns: 1fr 3fr;
-    gap: 1.5rem;
+    gap: 2rem;
     grid-template-areas:
       "header header"
       "... main"
@@ -493,6 +493,11 @@ footer .lower {
 
   .articles .main-article {
     grid-area: main;
+  }
+
+  .articles div {
+    display: grid;
+    gap: 2rem;
   }
 
   .articles h2 {
